# rust-uefi-testing

./: Cargo.toml  README.md
.cargo/: config.toml
Package/RustPkg1/: Cargo.toml
Package/RustPkg1/src/: interface.rs  lib.rs
Package/RustPkg1/src/component/: hello_world.rs  mod.rs
Package/RustPkg1/src/component/dxe_core/: mod.rs
Package/RustPkg2/: Cargo.toml
Platform/RustPlatformPkg/: Cargo.toml  RustPlatformPkg.dsc
RustPkg1/: Cargo.toml
RustPkg1/src/: interface.rs  lib.rs
RustPkg1/src/component/: hello_world.rs  mod.rs
RustPkg2/: Cargo.toml
RustPkg2/src/: lib.rs
RustPlatformPkg/: Cargo.toml
mu_config/: Cargo.toml
mu_config/src/: lib.rs  types.rs
mu_config/tests/data/: config.toml
mu_core/: Cargo.toml
mu_macro/: Cargo.toml
mu_macro/src/: from_macro.rs  from_path.rs  lib.rs  map.rs
mu_macro/tests/data/: test_config.toml  test_config1.toml  test_config2.toml  test_config3.toml  test_config4.toml
uefi_core/: Cargo.toml
uefi_core/src/: error.rs  lib.rs
uefi_macro/: Cargo.toml
uefi_macro/src/: lib.rs
uefi_macro/tests/data/: test_config.toml
