[workspace]
resolver = "2"

members = [
    "Package/*",
    "Platform/RustPlatformPkg",
]

[workspace.dependencies]
mu_core = { path = "mu_core" }
mu_macro = { path = "mu_macro" }
mu_config = { path = 'mu_config'}
RustPkg1 = { path = "Package/RustPkg1" }
RustPkg2 = { path = "Package/RustPkg2" }

# Custom libraries
RustBootServicesAllocatorDxe = { path = "Library/RustBootServicesAllocatorDxe" }

r-efi = "4.3.0"
log = { version = "0.4.21", default-features = false }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0