[workspace]
resolver = "2"

members = [
    "Package/*",
    "Platform/RustPlatformPkg",
]

default-members = [
    "Platform/RustPlatformPkg",
]

[workspace.dependencies]
mu_core = { path = "mu_core" }
mu_macro = { path = "mu_macro" }
mu_config = { path = 'mu_config'}
RustPkg1 = { path = "Package/RustPkg1" }
RustPkg2 = { path = "Package/RustPkg2" }

# Custom libraries
RustBootServicesAllocatorDxe = { path = "Library/RustBootServicesAllocatorDxe" }

# External Libraries
r-efi = "4.3.0"
log = { version = "0.4.21", default-features = false }
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"

# External Libraries for mu_config / mu_macro
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"]}
syn = { version = "2.0.53", features = ["full"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0