[package]
name = "RustPkg1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pkg1"
path = "src/lib.rs"

[dependencies]
r-efi = { workspace = true }
uefi_core = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
spin = { workspace = true }
uart_16550 = { workspace = true }
x86_64 = { workspace = true }
