[package]
name = "RustPlatformPkg"
version = "0.1.0"
edition = "2021"

[lib]
name = "platform_pkg"
path = "src/lib.rs"

[[bin]]
name = "hello_world_print"
path = "bin/hello_world_print.rs"
required-features = ["uefi"]

[[bin]]
name = "hello_world_buf"
path = "bin/hello_world_buf.rs"
required-features = ["uefi"]

[[bin]]
name = "hello_world_std"
path = "bin/hello_world_std.rs"
required-features = ["std"]

[[bin]]
name = "dxe_core_std"
path = "bin/dxe_core_std.rs"
required-features = ["std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# [[bin]]
# name = "hello_world_std"
# path = "bin/hello_world_std.rs"

# [[bin]]
# name = "dxe_core_std"
# path = "bin/dxe_core_std.rs"

[dependencies]
r-efi = { workspace = true}
RustPkg1 = { workspace = true }
RustPkg2 = { workspace = true}
uefi_core = { workspace = true }
RustBootServicesAllocatorDxe = { workspace = true }

[features]
default = []
std = ["uefi_core/std", "RustPkg1/std", "RustPkg2/std"]
uefi = [] # Used for filtering on what binaries are built, that is it