[package]
name = "mu_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
RustBootServicesAllocatorDxe = { workspace = true }
r-efi = { workspace = true }
mu_macro = { workspace = true }

[features]
default = []
std = []