[package]
name = "mu_macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "uefi_macro"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mu_config = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
toml = { workspace = true }
