[package]
name = "RustPkg2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg2"
path = "src/lib.rs"

[dependencies]
uefi_core = { workspace = true }
RustPkg1 = { workspace = true }
r-efi = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
spin ={ workspace = true }
uart_16550 = { workspace = true }
x86_64 = { workspace = true }

[features]
default = []
std = ["uefi_core/std"]